修改配置文件

--- a/tg-cms/src/main/resources/application.properties
+++ b/tg-cms/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #============================================================================ 
-# Configure System    
+# Configure System  
 #============================================================================
 system.time_zone=GMT+0:00
 system.systemName=tgcms
@@ -31,9 +31,9 @@ db.host=localhost
 db.port=3306
 db.name=tg_cms
 db.username=postgres
-db.password=TGadmin2015
+db.password=123456
 db.driver=org.postgresql.Driver
-db.url=jdbc\:postgresql\://182.92.129.128\:5432/tg_cms
+db.url=jdbc\:postgresql\://localhost\:5432/tg_cms
 db.validationQuery=SELECT 1
 db.dbBackupCmd=             
 db.dbBackupPath=
