--- a/tg-cms/src/main/resources/application.properties
+++ b/tg-cms/src/main/resources/application.properties
@@ -23,6 +23,14 @@ system.watermarkPath=
 system.excelTempletePath=../temp/upload/template
 #\u6570\u636e\u5e93\u5907\u4efd\u8def\u5f84
 system.dbBackupPath=../temp/files/backup/
+#\u7cfb\u7edf\u7ef4\u62a4\u542f\u7528
+system.maintenanceEnabled=true
+#\u7cfb\u7edf\u7ef4\u62a4\u9875\u9762
+system.maintenancePage=/maintenance.htm
+#\u7cfb\u7edf\u7ef4\u62a4\u5f00\u59cb\u65f6\u95f4
+system.maintenanceStartHour=2
+#\u7cfb\u7edf\u7ef4\u62a4\u7ed3\u675f\u65f6\u95f4
+system.maintenanceEndHour=6
 
 #============================================================================ 
 # Configure Jdbc    
