--- a/tg-cms/build.gradle
+++ b/tg-cms/build.gradle
@@ -1,33 +1,38 @@
-apply plugin: 'maven'
-apply plugin: 'war'
-apply plugin: 'eclipse-wtp'
+apply plugin: 'java' 
+apply plugin: 'eclipse' 
+apply plugin: 'war' 
+apply plugin: 'jetty' jar { baseName = 'tg-cms' version = '1.1' }
  
 sourceCompatibility = 1.8   // 设置 JDK 版本
  
 // 设置 maven 库地址
-repositories {  
+repositories { 
+    maven { url "http://maven.oschina.net/content/groups/public/"} 
+    maven { url "https://repo.spring.io/snapshot" } 
+    maven { url "https://repo.spring.io/milestone" } 
+    maven { url "https://repo.eclipse.org/content/repositories/paho-releases/" } 
+    maven { url "https://repo.eclipse.org/content/repositories/paho-snapshots/"} 
     mavenCentral() // 中央库
-    maven { url 'http://localhost:8081/nexus/content/groups/public' } // 自定义库地址
+    // maven { url 'http://localhost:8081/nexus/content/groups/public' } // 自定义库地址
+    // flatDir {
+    //     dirs 'lib'
+    // }
+}
+
+// 设置依赖 
+dependencies { 
+    compile fileTree(dir: 'lib', include: ['*.jar']) 
+    providedCompile 'javax.servlet:javax.servlet-api:3.1.0' // 编译期
+    providedRuntime 'javax.servlet:jstl:1.2' // 运行时 
 }
  
- 
-// 设置依赖
-dependencies {
-    providedCompile 'javax.servlet:servlet-api:2.5' // 编译期
-    providedRuntime 'javax.servlet:jstl:1.2'    // 运行时
+eclipse { 
+    classpath { 
+        containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER') 
+        containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8' 
+    } 
 }
- 
- 
-// 设置 Project Facets
-eclipse {
-    wtp {
-        facet {
-            facet name: 'jst.web', type: Facet.FacetType.fixed
-            facet name: 'wst.jsdt.web', type: Facet.FacetType.fixed
-            facet name: 'jst.java', type: Facet.FacetType.fixed
-            facet name: 'jst.web', version: '2.5'
-            facet name: 'jst.java', version: '1.8'
-            facet name: 'wst.jsdt.web', version: '1.0'
-        }
-    }
+
+task wrapper(type: Wrapper) { 
+    gradleVersion = '2.9' 
 }
