删除无用的配置

--- a/tg-cms/src/main/resources/application.properties
+++ b/tg-cms/src/main/resources/application.properties
@@ -7,7 +7,7 @@ system.systemName=tgcms
 system.systemPath=./tomcat
 system.systemIP=
 system.systemPort=
-system.systemURL=http\://192.168.1.110/tgcms
+system.systemURL=
 #\u9759\u6001\u5316\u8def\u5f84
 system.htmlPath=D:/nginx-1.8.0/html/
 #\u6587\u4ef6\u4e0a\u4f20\u7684\u4e34\u65f6\u8def\u5f84
@@ -15,7 +15,7 @@ system.baseStorageTempPath=../temp/files/temp
 #\u6587\u4ef6\u4e0a\u4f20\u7684\u8def\u5f84
 system.baseStoragePath=../temp/files
 #\u6587\u4ef6\u4e0a\u4f20\u8bbf\u95ee\u8def\u5f84
-system.uploadURL=http\://
+system.uploadURL=
 #\u6587\u4ef6\u4e0a\u4f20\u7684\u8def\u5f84\u6700\u5927\u5b57\u8282 100M  -1\u8868\u793a\u4e0d\u9650\u5236
 system.maxUploadSize=104857600
 #\u6c34\u5370\u8def\u5f84
