--- a/tg-cms/src/main/resources/application.properties
+++ b/tg-cms/src/main/resources/application.properties
@@ -74,8 +74,8 @@ security.loginPageUrl=/loginPage.gsp
 security.loginPageUrl4admin=/admin/loginPage.gsp
 #\u83b7\u53d6\u9a8c\u8bc1\u7801\u8def\u5f84
 security.getCaptchaUrl=/getCaptcha.gsp
-#\u83b7\u53d6\u9a8c\u8bc1\u7801\u8def\u5f84
-security.adminGetCaptchaUrl=/admin/getCaptcha.gsp
+#\u540e\u53f0\u83b7\u53d6\u9a8c\u8bc1\u7801\u8def\u5f84
+security.getCaptchaUrl4admin=/admin/getCaptcha.gsp
 #\u767b\u5f55\u8bf7\u6c42\u8def\u5f84
 security.loginUrl=/login
 #\u540e\u53f0\u767b\u5f55\u8bf7\u6c42\u8def\u5f84
@@ -87,7 +87,9 @@ security.logoutUrl4admin=/admin/logout
 #\u65e0\u6743\u9650\u9875\u9762\u8def\u5f84
 security.deniedPageUrl=/denied.htm
 #\u662f\u5426\u5f00\u542f\u9a8c\u8bc1\u7801
-security.openValidateCaptchaCode=true
+security.openValidateCaptchaCode=false
+#\u540e\u53f0\u662f\u5426\u5f00\u542f\u9a8c\u8bc1\u7801
+security.openValidateCaptchaCode4admin=true
 #\u5bc6\u7801\u52a0\u5bc6\u5f3a\u5ea6
 security.passwordEncoderStrength=11
 #\u8d85\u8fc7\u51fa\u9519\u6b21\u6570\u662f\u5426\u9501\u5b9a\u7528\u6237
