--- a/tg-cms/src/main/resources/application.properties
+++ b/tg-cms/src/main/resources/application.properties
@@ -90,12 +90,16 @@ security.deniedPageUrl=/denied.htm
 security.openValidateCaptchaCode=false
 #\u540e\u53f0\u662f\u5426\u5f00\u542f\u9a8c\u8bc1\u7801
 security.openValidateCaptchaCode4admin=true
-#\u5bc6\u7801\u52a0\u5bc6\u5f3a\u5ea6
-security.passwordEncoderStrength=11
 #\u8d85\u8fc7\u51fa\u9519\u6b21\u6570\u662f\u5426\u9501\u5b9a\u7528\u6237
 security.errorsLock=true
+#\u8d85\u8fc7\u51fa\u9519\u6b21\u6570\u662f\u5426\u9501\u5b9a\u7528\u6237
+security.errorsLock4admin=true
 #\u5bc6\u7801\u6700\u5927\u91cd\u8bd5\u6b21\u6570\uff0c\u8d85\u8fc7\u540e\u7528\u6237\u5c06\u88ab\u9501\u5b9a\u4e00\u5b9a\u65f6\u95f4
 security.maxRetryCount=5
+#\u540e\u53f0\u5bc6\u7801\u6700\u5927\u91cd\u8bd5\u6b21\u6570\uff0c\u8d85\u8fc7\u540e\u7528\u6237\u5c06\u88ab\u9501\u5b9a\u4e00\u5b9a\u65f6\u95f4
+security.maxRetryCount4admin=5
+#\u5bc6\u7801\u52a0\u5bc6\u5f3a\u5ea6
+security.passwordEncoderStrength=11
 
 #============================================================================ 
 # Configure Email    
