常规维护 不要更新

--- a/tg-cms/src/main/resources/application.properties
+++ b/tg-cms/src/main/resources/application.properties
@@ -67,9 +67,11 @@ security.indexUrl=/index.htm
 #\u9ed8\u8ba4\u9875\u9762
 security.defaultUrl=/index.gsp
 #\u540e\u53f0\u9996\u9875\u9762
-security.adminDefaultUrl=/admin/index.gsp
+security.defaultUrl4admin=/admin/index.gsp
 #\u767b\u5f55\u9875\u9762\u8def\u5f84
 security.loginPageUrl=/loginPage.gsp
+#\u540e\u53f0\u767b\u5f55\u9875\u9762UrlResolver pattern
+security.urlResolverPattern4admin=/admin
 #\u540e\u53f0\u767b\u5f55\u9875\u9762\u8def\u5f84
 security.loginPageUrl4admin=/admin/loginPage.gsp
 #\u83b7\u53d6\u9a8c\u8bc1\u7801\u8def\u5f84
@@ -78,12 +80,8 @@ security.getCaptchaUrl=/getCaptcha.gsp
 security.getCaptchaUrl4admin=/admin/getCaptcha.gsp
 #\u767b\u5f55\u8bf7\u6c42\u8def\u5f84
 security.loginUrl=/login
-#\u540e\u53f0\u767b\u5f55\u8bf7\u6c42\u8def\u5f84
-security.loginUrl4admin=/admin/login
 #\u9000\u51fa\u8def\u5f84
 security.logoutUrl=/logout
-#\u540e\u53f0\u9000\u51fa\u8def\u5f84
-security.logoutUrl4admin=/admin/logout
 #\u65e0\u6743\u9650\u9875\u9762\u8def\u5f84
 security.deniedPageUrl=/denied.htm
 #\u662f\u5426\u5f00\u542f\u9a8c\u8bc1\u7801
