--- a/tg-cms/src/main/webapp/WEB-INF/web.xml
+++ b/tg-cms/src/main/webapp/WEB-INF/web.xml
@@ -32,7 +32,7 @@
         <filter-name>XSSFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    <!--对 cookie进行处理，加强安全性-->
+    <!--对 cookie进行处理，加强安全性
     <filter>
         <filter-name>cookieFilter</filter-name>
         <filter-class>com.turingoal.cms.core.filter.TgCookieFilter</filter-class>
@@ -40,7 +40,7 @@
     <filter-mapping>
         <filter-name>cookieFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping>-->
 	<!-- spring 配置 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
