--- a/tg-cms/src/main/webapp/WEB-INF/web.xml
+++ b/tg-cms/src/main/webapp/WEB-INF/web.xml
@@ -23,19 +23,19 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-    <!--XSS（跨站脚本攻击）Filter，预防XSS攻击 -->
+    <!--XSS（跨站脚本攻击）Filter，预防XSS攻击 
     <filter>
         <filter-name>XSSFilter</filter-name>
-        <filter-class>com.turingoal.cms.core.filter.TgXSSFilter</filter-class>
+        <filter-class>com.turingoal.common.filter.TgXSSFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>XSSFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping>-->
     <!--对 cookie进行处理，加强安全性
     <filter>
         <filter-name>cookieFilter</filter-name>
-        <filter-class>com.turingoal.cms.core.filter.TgCookieFilter</filter-class>
+        <filter-class>com.turingoal.common.filter.TgCookieFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>cookieFilter</filter-name>
